# proxmark3-android

./: .gitignore  .gitmodules
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  glue.c  glue.h  pm3dev.c  pm3dev.h  pm3jni.c  pm3relayd.c  pm3relayd.h  pm3uart.c  pm3uart.h  pm3util.c  pm3util.h
app/src/main/c/dev/: CMakeLists.txt  pm3dev.c  pm3dev.h  pm3relay.c  pm3relayd.c
app/src/main/c/glue/: CMakeLists.txt  glue.c
app/src/main/c/jni/: CMakeLists.txt  device.c  device.h  glue.c  jni.c  pm3jni.c  pm3jni.h  pm3jniworker.c
app/src/main/c/pm3relay/: CMakeLists.txt  pm3relay.c
app/src/main/java/angelsl/androidapp/proxmark3/: Config.java  Util.java
app/src/main/java/angelsl/androidapp/proxmark3/activities/: SelectDeviceActivity.java
app/src/main/java/angelsl/androidapp/proxmark3/interop/: Device.java  DeviceInfo.java  Proxmark3.java
app/src/main/java/angelsl/androidapp/proxmark3/ui/: SessionActivity.java  SessionLogAdapter.java  SessionLogEntry.java
app/src/main/res/layout/: activity_select_device.xml  activity_session.xml  console_input.xml  console_output.xml  select_device_list_item.xml
app/src/main/res/menu/: select_device_toolbar.xml  session.xml
app/src/main/res/values/: dimens.xml  strings.xml
clib/: CMakeLists.txt  device.c  glue.c  jni.c
clib/workaround/readline/: readline.h
